# sheep2026

./: .gitignore  CLAUDE.md  HACKATHON-WINNERS.md  IDEA-KATASTAR.md  MapDashboard.jsx  README.md  RESEARCH-TECH-FIRST.md  RESEARCH.md  analiza_anomalija.py  buildings.glb  debug_wms.py  dohvati_katastrar.py  index.html  ms_footprints.py  package-lock.json  package.json  terrain.glb  vizualizacija.py
.claude/: settings.local.json
app/: index.html  package-lock.json  package.json  vite.config.js
backend/: .env.example  pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/api/: routes.py
backend/app/classify/: __init__.py  classifier.py
backend/app/ingest/: dgu_buildings.py  dgu_wfs.py  mocked_katastar.py  ms_footprints.py  osm.py
backend/app/llm/: ask.py  explain.py
backend/app/ontology/: __init__.py  init_db.py  models.py
backend/app/resolve/: __init__.py  resolver.py
backend/data/: parcels.geojson
public/: anomalije.json  ms_footprints.json
split-ontology/: .gitignore  README.md  pyproject.toml
split-ontology/backend/split_ontology/: __init__.py  api.py  data_loader.py  parcel_queue.py  resolution.py
split-ontology/backend/tests/: test_api.py  test_frontend_cesium_rendering.py  test_packaging.py  test_parcel_queue.py  test_resolution.py
split-ontology/data/: parcels.geojson
split-ontology/docs/superpowers/plans/: 2026-05-16-parcel-enforcement-queue.md  2026-05-16-split-ontology-mvp.md
split-ontology/frontend/: app.js  index.html  styles.css
src/: App.jsx  MapDashboard.jsx
vantir/: README.md  pyproject.toml
(+22 files in other folders)
